--- a/src/CSS/_layout.scss
+++ b/src/CSS/_layout.scss
@@ -227,6 +227,46 @@ h2 {
     }
 }
 
+/* Kart-sidan. */
+
+.container-search {
+   @include grid-container-small;
+
+
+    #search-input {
+        width: 270px;
+        height: 50px;
+        font: 100% $font-stack;
+        font-size: 20px;
+        font-weight: bold;
+        border: 4px solid $secondary-color;
+    }
+
+    #search-button {
+        width: 85px;
+        height: 50px;
+        border: 4px solid $secondary-color;
+        background-color: lighten($secondary-color, 35%);
+        font: 100% $font-stack;
+        font-size: 20px;
+        font-weight: bold;
+        color: $secondary-color;
+        justify-content: center;
+    }
+}
+
+.container-map {
+    width: 75%;
+    height: 450px;
+    margin: 3rem auto 5rem auto;
+    border: 5px solid $secondary-color;
+
+    #map {
+        height: 100%;
+    }
+}
+
+
 /* Mediaquery för samtliga sidor, ändringar vid min-bredd 992px. */
 @media (min-width: 992px) {
 
@@ -265,6 +305,8 @@ h2 {
         }
     }
 }
+
+
 
 /* Media-query för mörkt färgtema, gäller samtliga sidor. */
 @media (prefers-color-scheme:dark) {
