Lagt till en p i sök-containern i map.html för felmeddelanden, stylat hover för knapp, lagt en händelselyssnare på knappen som kör funktionen getInput som i sin tur anropar getData (fetch). showMap anropas som ställer om karta och markör till vald plats.

--- a/src/CSS/_layout.scss
+++ b/src/CSS/_layout.scss
@@ -232,7 +232,6 @@ h2 {
 .container-search {
    @include grid-container-small;
 
-
     #search-input {
         width: 270px;
         height: 50px;
@@ -252,6 +251,12 @@ h2 {
         font-weight: bold;
         color: $secondary-color;
         justify-content: center;
+        cursor: pointer;
+    }
+
+    #search-button:hover {
+        background-color: darken($secondary-color, 5%);
+        color: $white;
     }
 }
 
